Add new constructor
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/genedb-ng/trunk@8317 ee4ac58c-ac51-4696-9907-e4b3aa274f04